# project_preset

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  environment.yaml  make_doc.sh  make_doxygen.sh  readme.md  vcpkg.json
doc/: Doxyfile  autoref.py
doc/diagrams/: dot_templates.h  render_all.sh
doc/markdown/: index.md
doc/source/markdown/: doxygen_include.md  getting_started.md
docs/source/: conf.py  index.rst
docs/source/markdown/: getting_started.md
scripts/: build.sh  init_project_preset.sh  init_vcpkg.sh
src/: CMakeLists.txt
src/ClassA/: ClassA.cpp  ClassA.hpp
src/ClassB/: ClassB.cpp  ClassB.hpp
src/test_project/: CMakeLists.txt  main.cpp
